[project]
name = "drone-logistic"
version = "0.1.0"
description = "Simulador de logística de drones para 42"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "flake8>=7.0.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".venv, __pycache__"